Closed Bug 251844 Opened 21 years ago Closed 21 years ago

[FIX]<object> blocked by content policy doesn't show alternate content

Categories

(Core :: Layout, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.8beta1

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(1 file)

Two issues: 1) We should be using the error code 2) The error code should _be_ an error code.
Attached patch PatchSplinter Review
Attachment #153492 - Flags: superreview?(jst)
Attachment #153492 - Flags: review?(mvl)
OS: Linux → All
Priority: -- → P1
Hardware: PC → All
Summary: <object> blocked by content policy doesn't show alternate content → [FIX]<object> blocked by content policy doesn't show alternate content
Target Milestone: --- → mozilla1.8beta
Attachment #153492 - Flags: review?(mvl) → review+
Comment on attachment 153492 [details] [diff] [review] Patch sr=jst
Attachment #153492 - Flags: superreview?(jst) → superreview+
Fixed on trunk.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: