Fix bug 251844 -- <onject> blocked by content policy doesn't show alternate content.  r=mvl, sr=jst